--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "business_card_parser",
   "version": "1.0.0",
-  "description": "Project created to accept input from the Business Card OCR and parse the contact information to incluse the person's name, phone number and email address.",
+  "description": "Project created to accept input from the Business Card OCR and parse the contact information to include the person's name, phone number and email address.",
   "main": "app.js",
   "scripts": {
     "test": "mocha"
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/cjdaugh85/BusinessCardParser#readme",
   "dependencies": {
-    "chai": "^4.2.0",
-    "lodash": "^4.17.11",
-    "winston": "^3.1.0"
+    "compromise": "^11.12.3",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "chai": "^4.2.0"
   }
 }
